--- a/app/src/main/res/layout/activity_historico.xml
+++ b/app/src/main/res/layout/activity_historico.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rootView"
@@ -7,12 +7,32 @@
     android:layout_height="match_parent"
     tools:context="caiquecoelho.com.gasolina.HistoricoActivity">
 
+    <TextView
+        android:id="@+id/textViewNextRefuelling"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginStart="24dp"
+        android:text="Previsão próximo abastecimento" />
+
+    <TextView
+        android:id="@+id/txtNextRefuelling"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignStart="@+id/textViewNextRefuelling"
+        android:layout_below="@+id/textViewNextRefuelling"
+        android:text="Não é possível calcular ainda"
+        android:layout_marginTop="5dp"
+        />
+
     <ListView
         android:id="@+id/listView"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
+        android:layout_below="@+id/txtNextRefuelling"
+        android:layout_marginTop="10dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
-</android.support.constraint.ConstraintLayout>
+</RelativeLayout>
