--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -18,4 +18,5 @@
     <dimen name="car_width">40dp</dimen>
     <dimen name="car_height">40dp</dimen>
     <dimen name="opcional_size">10sp</dimen>
+    <dimen name="fab_margin">16dp</dimen>
 </resources>
